style:layout issues register

--- a/Frontend/src/styles/dialogs.scss
+++ b/Frontend/src/styles/dialogs.scss
@@ -147,6 +147,7 @@ input[type=search]{
 
   .card-scroll{
     top: 0;
+    height:calc(100% - 20px);
   }
 }
 
